--- a/client/public/global.css
+++ b/client/public/global.css
@@ -1,3 +1,27 @@
+:root {
+  --shadow-color: 48deg 86% 31%;
+  --shadow-elevation-low:
+    0.3px 0.5px 0.7px hsl(var(--shadow-color) / 0.34),
+    0.4px 0.8px 1px -1.2px hsl(var(--shadow-color) / 0.34),
+    1px 2px 2.5px -2.5px hsl(var(--shadow-color) / 0.34);
+  --shadow-elevation-medium:
+    0.3px 0.5px 0.7px hsl(var(--shadow-color) / 0.36),
+    0.8px 1.6px 2px -0.8px hsl(var(--shadow-color) / 0.36),
+    2.1px 4.1px 5.2px -1.7px hsl(var(--shadow-color) / 0.36),
+    5px 10px 12.6px -2.5px hsl(var(--shadow-color) / 0.36);
+  --shadow-elevation-high:
+  0px 0.3px 0.3px hsl(var(--shadow-color) / 0.34),
+    0px 1.7px 1.9px -0.4px hsl(var(--shadow-color) / 0.34),
+    -0.1px 3.2px 3.6px -0.7px hsl(var(--shadow-color) / 0.34),
+    -0.1px 5.2px 5.9px -1.1px hsl(var(--shadow-color) / 0.34),
+    -0.2px 8.4px 9.5px -1.4px hsl(var(--shadow-color) / 0.34),
+    -0.3px 13.1px 14.7px -1.8px hsl(var(--shadow-color) / 0.34),
+    -0.5px 19.9px 22.4px -2.1px hsl(var(--shadow-color) / 0.34),
+    -0.7px 29.3px 33px -2.5px hsl(var(--shadow-color) / 0.34);
+
+    --bg-color: #f2c41c;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -10,12 +34,14 @@ body {
 }
 
 body {
+  background: var(--bg-color);
   color: #333;
   margin: 0;
   padding: 8px;
   box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    
 }
 
 a {
